--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@deemlol/next-icons": "^0.1.9",
     "@panzoom/panzoom": "^4.6.0",
     "next": "16.0.3",
     "react": "19.2.0",
