--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@panzoom/panzoom": "^4.6.0",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-loader-spinner": "^8.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
